<resources>
    <string name="app_name">Mental Health App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Good day , Adarsh !</string>
    <string name="button_like">LIKE</string>
    <string name="button_comment">COMMENT</string>
    <string name="button_share">SHARE</string>
    <string name="text_sign_in">Sign In to Swastika</string>
    <string name="hint_enter_you_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_create_account">Don\'t have an account ?</string>
    <string name="hint_sign_up">Sign Up</string>
    <string name="hint_sign_in">Sign In</string>
    <string name="text_sign_up">Sign Up to Swastika</string>
    <string name="hint_name">Name</string>
    <string name="hint_mobile_number">Mobile Number</string>
    
    <string name="default_web_client_id">1046725423893-tmf17vg6oelr54etdgq5co07436djuq5.apps.googleusercontent.com</string>
</resources>