<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".login.SignInActivity">



    <ImageView
        android:id="@+id/image_view_yoga"
        android:layout_width="260dp"
        android:layout_height="200dp"
        android:src="@drawable/yoga_pic4"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/text_view_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/text_sign_in"
        android:textSize="32sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_yoga"/>


    <LinearLayout
        android:id="@+id/linear_layout_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_view_sign_in"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                tools:text="dfdfjdkf"
                android:inputType="textEmailAddress"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_you_email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:padding="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:inputType="textPassword"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/hint_sign_in"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_text_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/or_login_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or Log In With"

        app:layout_constraintTop_toBottomOf="@id/button_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in_with_google"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="Google"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/google"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:layout_constraintTop_toBottomOf="@+id/or_login_with"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>






        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            android:layout_height="2dp" />

    <TextView
        android:id="@+id/text_view_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_create_account"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp"
        android:textSize="17sp" />

        <TextView
            android:id="@+id/text_view_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textSize="18sp"
            android:textColor="#742DF4"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toEndOf="@id/text_view_create_account"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="13dp"
            app:layout_constraintTop_toBottomOf="@+id/divider"/>






</androidx.constraintlayout.widget.ConstraintLayout>