<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignUpActivity">

    <ImageView
        android:id="@+id/image_view_yoga"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/yoga_pic3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/baloo"

        android:text="@string/text_sign_up"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_yoga" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_sign_up"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/hint_name"
            tools:layout_editor_absoluteY="301dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_name"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:hint="Email Id"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:hint="Password"
            tools:layout_editor_absoluteY="301dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginEnd="80dp"
        android:textSize="17sp"

        android:text="@string/hint_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
        app:layout_constraintVertical_bias="0.417" />


</androidx.constraintlayout.widget.ConstraintLayout>